fix text align #2

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -738,7 +738,7 @@ section h3.section-subheading {
 }
 
 .contactwmclass {
-    text-align: start;
+    text-align: left;
     font-size: 1.4em;
 }
 
